# coingecko-cli-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
.plans/: split-api-rs.md
.reviews/: 2026-03-02-phase-1-review-v2.md  2026-03-02-phase-1-review.md  2026-03-02-phase-2-review-v2.md  2026-03-02-phase-2-review-v3.md  2026-03-02-phase-2-review.md  2026-03-02-phase-3-review-v2.md  2026-03-02-phase-3-review.md  2026-03-02-phase-4-review-v2.md  2026-03-02-phase-4-review.md  2026-03-02-phase-5-review-v2.md  2026-03-02-phase-5-review.md  2026-03-02-split-api-rs-plan-review-v2.md  2026-03-02-split-api-rs-plan-review.md
src/: api.rs  config.rs  main.rs  tui.rs  ui.rs
src/api/: client.rs  date.rs  history.rs  markets.rs  mod.rs  price.rs  search.rs  trending.rs  tui_data.rs
tests/: cli.rs
