[package]
name = "coingecko-cli"
version = "1.3.0"
edition = "2024"
default-run = "cg"
description = "Real-time crypto data from your terminal, powered by the CoinGecko API"
license = "MIT"

[[bin]]
name = "cg"
path = "src/main.rs"

[[bin]]
name = "coingecko"
path = "src/main.rs"

[dependencies]
# CLI routing
clap = { version = "4", features = ["derive"] }

# Async runtime + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
comfy-table = "7"
colored = "2"

# CSV export
csv = "1"

# Persistent config (stores key/tier in OS config dir)
directories = "5"

# Interactive prompts (auth flow)
dialoguer = "0.11"

# Interactive TUI
ratatui = "0.29"
crossterm = "0.28"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
